arm64/dts: surfna: initial surfna device tree
WHY: new project requires specific device tree
HOW: add specific device tree for surfna and enable them for compliation

Change-Id: Ie0a623ac1477426e7e5a6096c34a53bcb35bbdae
Signed-off-by: lixh8 <lixh8@lenovo.com>
Reviewed-on: https://gerrit.mot.com/1262345
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-on: https://gerrit.mot.com/1265688
Reviewed-on: https://gerrit.mot.com/1272911
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -62,6 +62,14 @@ config QCOM_GLINK_SSR
 	  implements the SSR protocol for notifying the remote processor about
 	  neighboring subsystems going up or down.
 
+config SURFNA_DTB
+        depends on ARCH_QCOM
+        default n
+        bool "SurfNA DTBs"
+        help
+          Only include SurfNA specific DTBs to limit the number that
+          get built during kernel compilation.
+
 config QCOM_CPUSS_DUMP
 	bool "CPU Subsystem Dumping support"
 	help
