--- a/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
@@ -220,6 +220,8 @@
 	qcom,lower-limit-capacity = <60>;
 	qcom,mmi-disable-hvdcp;
 	dpdm-supply = <&usb_otg>;
+	qcom,chg-led-sw-controls;
+	qcom,chg-led-support;
 };
 
 &pm8937_vadc {
