--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -91,6 +91,15 @@ config SMB1390_CHARGE_PUMP_PSY
 	  Technologies, Inc.’s family of standalone chargers to enable a high
 	  current, low profile Li+ battery charging system.
 
+config QPNP_SMBCHARGER_MMI_LITE
+	tristate "QPNP SMB Charger driver for MMI LITE"
+	depends on MFD_SPMI_PMIC
+	help
+	  Say Y here to enable the dual path switch mode battery charger which
+	  supports USB detection and battery charging up to 3A.
+	  The driver also offers relevant information to userspace via the
+	  power supply framework.
+
 config SMB1351_USB_CHARGER
         tristate "smb1351 usb charger (with VBUS detection)"
         depends on I2C
