leds: leds-atc: add driver for ATC LED
porting leds-atc from O base: (CR) (CR)
ATC (or charing) led is controlled using dedicated register on PMIC.
Add dedicated driver for this purpose instead of hacking leds-qpnp code.

Change-Id: I41932f6fc535dffa18423770315e0d45761495bd
Signed-off-by: hujing3 <hujing3@lenovo.com>
Reviewed-on: https://gerrit.mot.com/1287860
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -752,6 +752,15 @@ config LEDS_MLXREG
 	  device add call. Say Y to enable these. To compile this driver as a
 	  module, choose 'M' here: the module will be called leds-mlxreg.
 
+config LEDS_ATC
+        tristate "Support for PMIC ATC LED"
+        depends on LEDS_CLASS && SPMI
+        help
+          This driver supports the ATC led functionality of Qualcomm PNP PMIC.
+          Creates standard LED interface for the auto trickle charge indication
+          LED. SPMI register write is used to access PMIC control register.
+          Device tree can be used to adjust control register address used.
+
 config LEDS_USER
 	tristate "Userspace LED support"
 	depends on LEDS_CLASS
