--- a/arch/arm64/boot/dts/qcom/msm8940-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8940-moto-common-overlay.dtsi
@@ -206,7 +206,7 @@
 	qcom,flash-disable-soc = <1>;
         status = "okay";
 	/delete-property/ qcom,iterm-ma;
-	//qcom,iterm-disabled;
+	qcom,iterm-disabled;
 	qcom,usbid-disabled;
 	/delete-property/ qcom,autoadjust-vfloat;
 	qcom,fastchg-current-ma = <2500>;
