arm64/dts:add Sunwoda KE40 battery profile.
Add Sunwoda KE40 battery profile for surfna.
Set Defenderault serial number as ATL battery.

Change-Id: I504cc2b2ed662187871b5890b0839013c5127bd2
Signed-off-by: xieqiong2 <xieqiong2@lenovo.com>
Reviewed-on: https://gerrit.mot.com/1301202
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wei Xu <xuwei9@lenovo.com>
Reviewed-by: Wang Wang <wangwang1@lenovo.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
@@ -170,9 +170,9 @@
 
 &mtp_batterydata {
 	qcom,batt-id-range-pct = <15>;
-	#include "batterydata-he50-atl-pmi8937.dtsi"
-	#include "batterydata-he50-cos-pmi8937.dtsi"
-	#include "batterydata-he50-cos-pmi8937-r1.dtsi"
+        df-serialnum = "SB18C43804";
+        #include "batterydata-ke40-atl.dtsi"
+        #include "batterydata-KE40_Sunwoda-4V4-2820mah.dtsi"
 };
 
 
