arm64/dts: fix VtsFirmwareDtboVerification fails
ERROR: ufdt_verify_fragment():failed to verify fragment[fragment@50], overlay node __overlay__ to target l1-icache
After fixed above usb_otg overlay issue, it fails again because below error
ERROR: ufdt_verify_fragment():failed to verify fragment[fragment@7], overlay node __overlay__ to target soc
fix gpio_key pin ctrl overlay issue

Change-Id: I5f33d8a37bfbc9c86686b69590d235029aa38e3f
Reviewed-on: https://gerrit.mot.com/1302517
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/qcom/msm8940-surfna-base.dts
+++ b/arch/arm64/boot/dts/qcom/msm8940-surfna-base.dts
@@ -39,6 +39,7 @@
 	/delete-node/ cam_sensor_front_sleep;
 	/delete-node/ cam_sensor_front1_default;
 	/delete-node/ cam_sensor_front1_sleep;
+	/delete-node/ tlmm_gpio_key;
 };
 
 /* camera flash and gpio 50 */
@@ -99,6 +100,10 @@
 
 &thermal_zones {
 	/delete-node/ quiet-therm-adc;
+	/delete-node/ pa-therm1-adc;
+	/delete-node/ case-therm-adc;
+	/delete-node/ pa-therm0-adc;
+	/delete-node/ xo-therm-adc;
 };
 
 &qpnp_smbcharger {
