--- a/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
@@ -100,6 +100,15 @@
 
 	/delete-node/ adv7533@39;
 	/delete-node/ pericom-type-c@1d;
+
+	tfa987x:tfa98xx@34 {
+		compatible = "nxp,tfa98xx";
+		reg = <0x34>;
+		reset-gpio = <&tlmm 89 0>;
+		irq-gpio = <&tlmm 90 0>;
+		rpc-send-delay = <5>;
+		status = "ok";
+	};
 };
 
 &i2c_3 {
