--- a/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8940-surfna-common-overlay.dtsi
@@ -206,6 +206,7 @@
 	qcom,bcl-lm-threshold-ma = <126>;
 	qcom,bcl-mh-threshold-ma = <400>;
 	qcom,fg-iterm-ma = <150>;
+        qcom,fg-chg-iterm-ma = <58>;
 	qcom,fg-vbat-estimate-diff-mv = <1000>;
 	qcom,fg-delta-soc = <1>;
 	qcom,fg-max-soc = <100>;
@@ -253,9 +254,9 @@
 					<700 700 0>,
 					<400 400 0>;
 	qcom,stepchg-voltage-mv = <4200>;
-	qcom,stepchg-current-ma = <2000>;
-	qcom,stepchg-taper-ma = <1800>;
-	qcom,stepchg-iterm-ma = <125>;
+	qcom,stepchg-current-ma = <1850>;
+	qcom,stepchg-taper-ma = <1850>;
+	qcom,stepchg-iterm-ma = <58>;
 	/delete-property/ qcom,enable-hvdcp-9v;
 	qcom,weak-charger-check-enable;
 	qcom,temp-warm-current-ma = <1455>;
