--- a/arch/arm64/boot/dts/qcom/dsi-panel-mot-djn_545_720p-video-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-mot-djn_545_720p-video-common.dtsi
@@ -24,7 +24,7 @@ qcom,mdss-dsi-panel-height = <1440>;
 qcom,mdss-pan-physical-width-dimension = <62>;
 qcom,mdss-pan-physical-height-dimension = <124>;
 qcom,mdss-dsi-h-front-porch = <32>;
-qcom,mdss-dsi-h-back-porch = <280>;
+qcom,mdss-dsi-h-back-porch = <210>;
 qcom,mdss-dsi-h-pulse-width = <12>;
 qcom,mdss-dsi-h-sync-skew = <0>;
 qcom,mdss-dsi-v-back-porch = <12>;
@@ -91,9 +91,9 @@ qcom,mdss-dsi-lane-0-state;
 qcom,mdss-dsi-lane-1-state;
 qcom,mdss-dsi-lane-2-state;
 qcom,mdss-dsi-lane-3-state;
-qcom,mdss-dsi-panel-timings = [98 22 16 00 4A 4E 1A 26 1A 03 04 00];
+qcom,mdss-dsi-panel-timings = [94 20 14 00 46 4A 1A 24 18 03 04 00];
 qcom,mdss-dsi-t-clk-post = <0x04>;
-qcom,mdss-dsi-t-clk-pre = <0x1e>;
+qcom,mdss-dsi-t-clk-pre = <0x1d>;
 qcom,mdss-dsi-bl-min-level = <1>;
 qcom,mdss-dsi-bl-max-level = <4095>;
 qcom,mdss-dsi-dma-trigger = "trigger_sw";
