--- a/arch/arm64/boot/dts/qcom/msm-arm-smmu-impl-defs-8937.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm-arm-smmu-impl-defs-8937.dtsi
@@ -1,4 +1,5 @@
-/* Copyright (c) 2018, Motorola Mobility Inc. All rights reserved.
+/*
+ * Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -10,17 +11,15 @@
  * GNU General Public License for more details.
  */
 
-/dts-v1/;
-/plugin/;
-
-#include <dt-bindings/clock/qcom,gcc-sdm429w.h>
-#include <dt-bindings/clock/qcom,rpmcc.h>
-#include <dt-bindings/clock/mdss-28nm-pll-clk-legacy.h>
-#include <dt-bindings/clock/qcom,cpu-sdm.h>
-#include "msm8940-surfna-common-overlay.dtsi"
-
-/ {
-	model = "surfna";
-	qcom,msm-id = <313 0x0>;
-	qcom,board-id = <0x48 0xA000>, <0x49 0xA000>;
+&kgsl_smmu {
+	attach-impl-defs = <0x6000 0x270>,
+		<0x6060 0x1055>,
+		<0x6800 0x6>,
+		<0x6900 0x3ff>,
+		<0x6924 0x204>,
+		<0x6928 0x10800>,
+		<0x6930 0x400>,
+		<0x6960 0xffffffff>,
+		<0x6b64 0xa0000>,
+		<0x6b68 0xaaab92a>;
 };
