--- a/arch/arm64/boot/dts/qcom/msm8940-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8940-moto-common-overlay.dtsi
@@ -10,7 +10,7 @@
  * GNU General Public License for more details.
  */
 
-#include "carrier-channel-ids.dtsi"
+//#include "carrier-channel-ids.dtsi"
 #include "msm8937-moto-pinctrl-overlay.dtsi"
 #include <dt-bindings/moto/moto-mem-reserve.h>
 
@@ -185,8 +185,8 @@
 		pinctrl-names = "spi_default", "spi_sleep";
 		pinctrl-0 = <&spi_7_active &spi7_cs0_active>;
 		pinctrl-1 = <&spi_7_sleep &spi7_cs0_sleep>;
-		clocks = <&clock_gcc clk_gcc_blsp2_ahb_clk>,
-			 <&clock_gcc clk_gcc_blsp2_qup3_spi_apps_clk>;
+		clocks = <&gcc GCC_BLSP1_AHB_CLK>,
+			<&gcc GCC_BLSP1_QUP3_SPI_APPS_CLK>;
 		clock-names = "iface_clk", "core_clk";
 		qcom,infinite-mode = <0>;
 		qcom,use-bam;
